test/scc_test/expr/semantic-errors/001.t
void test()
{
    int a;
    a[2];
}